WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276867
[CSS] Fix :not(:has(> foo))) invalidation
https://bugs.webkit.org/show_bug.cgi?id=276867
Summary
[CSS] Fix :not(:has(> foo))) invalidation
Matthieu Dubet
Reported
2024-07-21 12:21:28 PDT
Created
attachment 471925
[details]
Testcase We don't invalidate those correctly (the :not is ignored). Fix :not(:has(> foo))) invalidation
Attachments
Testcase
(1.50 KB, text/html)
2024-07-21 12:21 PDT
,
Matthieu Dubet
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Matthieu Dubet
Comment 1
2024-07-21 12:21:55 PDT
rdar://122689282
Matthieu Dubet
Comment 2
2024-07-21 12:24:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31043
EWS
Comment 3
2024-10-31 16:48:53 PDT
Committed
285987@main
(95ffd81b29e8): <
https://commits.webkit.org/285987@main
> Reviewed commits have been landed. Closing PR #31043 and removing active labels.
EWS
Comment 4
2024-11-19 18:40:07 PST
Committed
283286.505@safari-7620-branch
(03500a86effc): <
https://commits.webkit.org/283286.505@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2316 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug