[CSS] Fix :not(:has(> foo)) invalidation https://bugs.webkit.org/show_bug.cgi?id=276867 rdar://122689282

Reviewed by NOBODY (OOPS!).

This fix propagates the IsNegation boolean to the StyleInvalidation:
if all the rules in the RuleSet don't match and the selector has
an uneven number of :not() pseudoclass, we invalidate the style.

* LayoutTests/fast/css/invalidation-not-has-expected.txt: Added.
* LayoutTests/fast/css/invalidation-not-has.html: Added.
* LayoutTests/fast/css/style-invalidation-attribute-change-descendants-expected.txt:
* LayoutTests/fast/css/style-invalidation-class-change-descendants-expected.txt:

We are invalidating more elements than before: childs of :not(xxx)

* Source/WebCore/style/StyleInvalidator.cpp:
(WebCore::Style::Invalidator::Invalidator):
(WebCore::Style::m_ruleInformation):
(WebCore::Style::Invalidator::collectRuleInformation):
(WebCore::Style::Invalidator::invalidateIfNeeded):
(WebCore::Style::Invalidator::invalidateUserAgentParts):
(WebCore::Style::Invalidator::addToMatchElementRuleSets):
* Source/WebCore/style/StyleInvalidator.h: